# CEngine

./: CMakeLists.txt  Engine.ixx  README.md  xmake.lua
Base/: Base.ixx
Image/: Image.ixx  Pixel.ixx
Node/: Export.ixx  Node.ixx  PBR3D.ixx  RenderUnit3D.ixx
Node/Behaviour/: Behaviour.ixx  Factory.ixx
Presets/: PresetsLoader.ixx
Presets/Behaviours/: Export.ixx  FlyCamera3D.ixx  Rotator3D.ixx
Presets/Shader/: Base.frag  Base.vert  PBR.frag  PBR.vert
Render/: Camera.ixx  Export.ixx  Material.ixx  Mesh.ixx  ShaderManager.ixx  ShaderUniformVar.ixx  Texture.ixx
UI/: UI.ixx
UI/EditorUI/: EditorUI.ixx  FileBrowser.ixx  GPUResourceViewer.ixx  Inspector.ixx  SceneTreeBrowser.ixx
Utils/: ModelImporter.ixx  Utils.ixx  WindowsFileDialog.ixx
